package creational.factory;

public interface AircraftFactory {
    public Aircraft buildAircraft();
}
